--- a/gradle.properties
+++ b/gradle.properties
@@ -49,7 +49,7 @@ mod_name=Create Indestructible
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.2.0
+mod_version=1.3.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -57,4 +57,4 @@ mod_group_id=com.cyber98.createindestructible
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=cyber.98
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=A create mod addon that allows you to create indestructible blocks through a complex manufacturing process.
+mod_description=A create mod addon that allows you to create indestructible blocks, new food, and special tools, through complex manufacturing processes.
