--- a/gradle.properties
+++ b/gradle.properties
@@ -55,6 +55,6 @@ mod_version=1.3.0
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=com.cyber98.createindestructible
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=cyber.98
+mod_authors=cyber.98, gorgefinschleister
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=A create mod addon that allows you to create indestructible blocks, new food, and special tools, through complex manufacturing processes.
